Feat:(Main),style(Main) added 3 div

--- a/index.html
+++ b/index.html
@@ -11,26 +11,39 @@
     <header>
         <div>
             <div class="lightblue">
-                <nav class="flexContainer goldenrod boxed">
-                    <div class="logo">
-                    <span>Logo</span>
+                <nav class="flexContainer goldenrod jtfspacebet alignitm boxed">
+                    <div class="logo border">
+                        <span>Logo</span>
                     </div>
-                    <div class="link">
-                    <a href="">link</a>
-                    <a href="">link</a>
-                    <a href="">link</a>
+                    <div class="link border">
+                        <a href="">link</a>
+                        <a href="">link</a>
+                        <a href="">link</a>
                     </div>
-                    <div class="login">
-                    <span>login</span>
+                    <div class="login border">
+                        <span>login</span>
                     </div>
                 </nav>
             </div>
-            <div class="blue">
-                <div class="pink"></div>
+            <div class="flexContainer blue jtfcenter alignitm">
+                <div class="pink border">
+                </div>
             </div>
         </div>
     </header>
     <main>
+        <div class="flexContainer alignitm white jtfcenter">
+            <div class="softblue"></div>
+            <div class="softpink"></div>
+        </div>
+        <div class="flexContainer alignitm gray jtfcenter">
+            <div class="softblue"></div>
+            <div class="softpink"></div>
+        </div>
+        <div class="flexContainer alignitm white jtfcenter flxdirectionrowrev">
+            <div class="softblue"></div>
+            <div class="softpink"></div>
+        </div>
 
     </main>
     <footer>
