Feat:(main,footer)style:(main,footer)added allcont

--- a/index.html
+++ b/index.html
@@ -25,28 +25,63 @@
                     </div>
                 </nav>
             </div>
-            <div class="flexContainer blue jtfcenter alignitm">
+            <div class="flexContainer blue jtfcenter alignitm  ">
                 <div class="pink border">
                 </div>
             </div>
         </div>
     </header>
+    <!-- Corpo della pagina -->
     <main>
-        <div class="flexContainer alignitm white jtfcenter">
-            <div class="softblue"></div>
-            <div class="softpink"></div>
+        <div class="flexContainer alignitm jtfcenter white ">
+            <div class="flexContainer alignitm jtfcenter boxed">
+                <div class="softblue border"></div>
+                <div class="softpink border"></div>
+            </div>
         </div>
-        <div class="flexContainer alignitm gray jtfcenter">
-            <div class="softblue"></div>
-            <div class="softpink"></div>
+        <div class="flexContainer alignitm gray jtfcenter ">
+            <div class="flexContainer alignitm jtfcenter boxed">
+                <div class="softpink border"></div>
+                <div class="softblue border"></div>
+            </div>
         </div>
-        <div class="flexContainer alignitm white jtfcenter flxdirectionrowrev">
-            <div class="softblue"></div>
-            <div class="softpink"></div>
+        <div class="flexContainer alignitm white jtfcenter ">
+            <div class="flexContainer alignitm jtfcenter  boxed">
+                <div class="softblue border"></div>
+                <div class="softpink border"></div>
+            </div>
         </div>
-
+        <div class="flexContainer jtfcenter alignitm gray big ">
+            <div class="flexContainer alignitm jtfcenter boxed">
+                <div class="green border">
+                </div>
+            </div>
+        </div>
     </main>
+    <!-- Footer -->
     <footer>
+        <div class="flexContainer jtfcenter black alignitm spacer ">
+            <div class="flexContainer alignitm jtfcenter boxed ">
+                <div class="lightorange"></div>
+                <div class="cyan flexContainer">
+                    <div class="block"></div>
+                    <div class="block"></div>
+                    <div class="block"></div>
+                    <div class="block"></div>
+                </div>
+            </div>
+        </div>
+        <div class="flexContainer jtfcenter black alignitmend smooth ">
+            <div class="flexContainer jtfcenter alignitmend boxed ">
+                <div class="flexContainer jtfspacebet alignitm lightgreen">
+                    <div class="logofooter border">Logo</div>
+                    <div class="bottonefooter">
+                        <button id="bottone">Bottone</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
     </footer>
 </body>
